@@ -1,5 +1,9 @@
 06/22/2003 Bob Rossi <bob_rossi@cox.net>
 
+	* interface.c: Fix flicker problem when ':set sc' is set.
+
+06/22/2003 Bob Rossi <bob_rossi@cox.net>
+
 	* TODO: Update to best of my knowledge
 	* interface.c: Remove old cludge to fix CTRL+SPACE crash. The crash no
 	longer happens.
